fix: entity mapping